--- a/resume.css
+++ b/resume.css
@@ -92,7 +92,7 @@ body {
     background: #fff;
     color: #0bb5f4;
     border-radius: 50%;
-    margin-right: 15px;
+    margin-right: 5px;
     font-size: 16px;
     position: relative;
 }
@@ -119,6 +119,9 @@ body {
 
 .resume .resume_left .resume_skills ul li .skill_name {
     width: 25%;
+    font-size: 16px;
+    letter-spacing: 1px;
+    padding-top: 3px;
 }
 
 .resume .resume_left .resume_skills ul li .skill_progress {
